Configuration converted to use attribute resolver.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@553 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/conf/origin.properties
+++ b/src/conf/origin.properties
@@ -43,7 +43,6 @@
 #
 ###################################################################################
 
-
 ##### General Configuration #####
 
  # [Required] Name of this Attribute Authority (usually a dns name)
@@ -52,30 +51,11 @@
  # [Optional] Set to true if the Attribute Authority should pass internal error messages to 
  # the SHAR (for debugging purposes) (defaults to false)
  #edu.internet2.middleware.shibboleth.aa.AAServlet.passThruErrors = false
- 
 
+##### Attribute Resolution #####
 
-##### Data Source #####
-	
- # [Required] JNDI context implementation to be used for attribute retrieval
- java.naming.factory.initial=edu.internet2.middleware.shibboleth.aaLocal.EchoCtxFactory
- #java.naming.factory.initial=com.sun.jndi.ldap.LdapCtxFactory
-
-   ### Parameters for com.sun.jndi.ldap.LdapCtxFactory ###
-	
-   # [Required if active] URL of ldap server/search base
-   #java.naming.provider.url = ldap://shib2.internet2.edu/ou=People,dc=internet2,dc=edu
-
-   # [Optional] ldap bind dn
-   #java.naming.security.principal =
-
-   # [Optional] Password for ldap non-anonymous binding
-   #java.naming.security.credentials =
-
-   # [Optional] Name of the ldap attribute that contains the principal 
-   # (Defaults to "uid=") (Use the "uid=%s" form if the principal name is not part of the dn)
-   #edu.internet2.middleware.shibboleth.aa.AAServlet.ldapUserDnPhrase = uid=
-
+ # [Required] Attribute Resolver configuration
+ #edu.internet2.middleware.shibboleth.aa.attrresolv.AttributeResolver.ResolverConfig = /conf/resolver.xml
 
 ##### Attribute Release Policies #####
 
@@ -97,7 +77,6 @@
 # Shared Configuration
 #
 ###################################################################################
-
 
 ##### Attribute Query Handle Repository #####
 
