AuthenticationMethod sent in HS SAML response is now configurable via a runtime property.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@569 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/conf/origin.properties
+++ b/src/conf/origin.properties
@@ -17,6 +17,9 @@
 
  # [Optional] HTTP Request Header to get principal name from (defaults to REMOTE_USER)
  #edu.internet2.middleware.shibboleth.hs.HandleServlet.username = REMOTE_USER
+ 
+ # [Optional] URI identifying the authentication mechanism that is used by the HS
+ #edu.internet2.middleware.shibboleth.hs.HandleServlet.authMethod = urn:oasis:names:tc:SAML:1.0:am:password
 
 ##### Assertion Signing #####
 
