Added attribute resolver tests to ant configuration.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@571 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -136,6 +136,7 @@
             <classpath refid="build.path" />
             <formatter type="plain" />
             <test name="edu.internet2.middleware.shibboleth.aa.arp.ArpTests" />
+			<test name="edu.internet2.middleware.shibboleth.aa.attrresolv.ResolverTests" />
         </junit>
     </target>
     
