Fixed commenting in config file.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@574 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/conf/origin.properties
+++ b/src/conf/origin.properties
@@ -57,7 +57,7 @@
 
 ##### Attribute Resolution #####
 
- # [Required] Attribute Resolver configuration
+ # [Optional] Attribute Resolver configuration (Defaults to /conf/resolver.xml)
  #edu.internet2.middleware.shibboleth.aa.attrresolv.AttributeResolver.ResolverConfig = /conf/resolver.xml
 
 ##### Attribute Release Policies #####
