ARP caching timeout is now defined in seconds.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@579 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/conf/origin.properties
+++ b/src/conf/origin.properties
@@ -70,9 +70,9 @@
    # [Required if active] Path from which Policies can be loaded
    edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository.Path = /conf/arps/
 	
-   # [Optional] Time in milliseconds for which Release Policies should be cached
+   # [Optional] Time in seconds for which Release Policies should be cached
    # (Defaults to 0 or "no caching")
-   edu.internet2.middleware.shibboleth.aa.arp.BaseArpRepository.ArpTTL = 300000
+   edu.internet2.middleware.shibboleth.aa.arp.BaseArpRepository.ArpTTL = 300
 
 
 ###################################################################################
