Converted Handle lifetime configuration property to seconds.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@580 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/conf/origin.properties
+++ b/src/conf/origin.properties
@@ -89,8 +89,8 @@
 
    ### Parameters for edu.internet2.middleware.shibboleth.hs.provider.MemoryHandleRepository ###
 
-   # [Optional] Time in milliseconds for which issued AQHs are valid (Defaults to 1800000 or 30 minutes)
-   #edu.internet2.middleware.shibboleth.hs.BaseHandleRepository.handleTTL = 10000
+   # [Optional] Time in seconds for which issued AQHs are valid (Defaults to 1800 or 30 minutes)
+   #edu.internet2.middleware.shibboleth.hs.BaseHandleRepository.handleTTL = 1000
 
    ### Parameters for edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository ###
 	
@@ -107,8 +107,8 @@
    # [Required if active] Password for the private key
    #edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository.keyStoreKeyPassword = shibhs
 
-   # [Optional] Time in milliseconds for which issued AQHs are valid (Defaults to 1800000 or 30 minutes)
-   #edu.internet2.middleware.shibboleth.hs.BaseHandleRepository.handleTTL = 10000
+   # [Optional] Time in seconds for which issued AQHs are valid (Defaults to 1800 or 30 minutes)
+   #edu.internet2.middleware.shibboleth.hs.BaseHandleRepository.handleTTL = 1000
 
 ##### Club Configuration #####
 
