--- a/.classpath
+++ b/.classpath
@@ -11,18 +11,16 @@
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/opensaml.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/ldap.jar"/>
     <classpathentry kind="lib" path="lib/junit-3.8.1.jar" sourcepath="/Shibboleth/lib/junit-3.8.1-src.jar"/>
-    <classpathentry kind="lib" path="lib/bcprov-jdk14-117.jar" sourcepath="/Shibboleth/lib/bcprov-jdk14-117-src.jar"/>
     <classpathentry kind="var" path="JAVA_HOME/jre/lib/jce.jar"/>
     <classpathentry kind="var" path="JAVA_HOME/jre/lib/jsse.jar"/>
     <classpathentry kind="lib" path="lib/log4j-1.2.5.jar" sourcepath="/Shibboleth/lib/log4j-1.2.5-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/jug-1.0.1.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xalan-2.4.1.jar"/>
-    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xml-apis-2.4.1.jar"/>
-    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlParserAPIs-2.2.1.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlsec-1.0.5.jar"/>
-    <classpathentry kind="lib" path="lib/xercesImpl-2.2.1.jar" sourcepath="/Shibboleth/lib/xercesImpl-2.2.1-src.jar"/>
     <classpathentry kind="lib" path="lib/ant-1.5.1.jar"/>
     <classpathentry kind="lib" path="lib/ant-optional-1.5.1.jar"/>
     <classpathentry kind="lib" path="lib/servlet-2.3.jar"/>
+    <classpathentry kind="lib" path="lib/dom3-xercesImpl-2.4.0.jar"/>
+    <classpathentry kind="lib" path="lib/dom3-xml-apis-2.4.0.jar"/>
     <classpathentry kind="output" path="webApplication/WEB-INF/classes"/>
 </classpath>
