Changed config property to reflect the fact that we are using URIs to name sites.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@598 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/conf/origin.properties
+++ b/src/conf/origin.properties
@@ -9,8 +9,8 @@
  # [Required] Name of this Handle Service (usually a dns name)
  #edu.internet2.middleware.shibboleth.hs.HandleServlet.issuer = shib2.internet2.edu
 
- # [Required] Authentication scope (usually a dns domain)
- #edu.internet2.middleware.shibboleth.hs.HandleServlet.authenticationDomain = shibdev.edu
+ # [Required] The name of this origin site (a URI)
+ #edu.internet2.middleware.shibboleth.hs.HandleServlet.siteName = urn:mace:incommon:pilot:shibdev.edu
 
  # [Required] URL at which the corresponding Attribute Authority can be reached
  #edu.internet2.middleware.shibboleth.hs.HandleServlet.AAUrl = http://host.test.edu/shibboleth/AA
