Downcase InCommon URI in example config.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@600 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/conf/origin.properties
+++ b/src/conf/origin.properties
@@ -113,7 +113,7 @@
 ##### Club Configuration #####
 
  # [Optional] URIs that define club policy, separated by commas (defaults to the InCommon pilot policy)
- #edu.internet2.middleware.shibboleth.audiences = urn:mace:InCommon:pilot:2003, urn:example:com:exampleClub
+ #edu.internet2.middleware.shibboleth.audiences = urn:mace:incommon:pilot:2003, urn:example:com:exampleClub
 
 
 
