Edited eclipse config to point to new xml lib location.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@603 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,9 @@
 <classpath>
     <classpathentry kind="src" path="src"/>
     <classpathentry kind="src" path="tests"/>
+    <classpathentry kind="lib" path="endorsed/dom3-xercesImpl-2.4.0.jar"/>
+    <classpathentry kind="lib" path="endorsed/dom3-xml-apis-2.4.0.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/opensaml.jar"/>
-    <classpathentry kind="lib" path="lib/dom3-xercesImpl-2.4.0.jar"/>
-    <classpathentry kind="lib" path="lib/dom3-xml-apis-2.4.0.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-beanutils.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-collections.jar"/>
     <classpathentry kind="lib"
