--- a/src/conf/origin.properties
+++ b/src/conf/origin.properties
@@ -7,13 +7,13 @@
 ##### General Configuration #####
 
  # [Required] Name of this Handle Service (usually a dns name)
- #edu.internet2.middleware.shibboleth.hs.HandleServlet.issuer = shib2.internet2.edu
+ edu.internet2.middleware.shibboleth.hs.HandleServlet.issuer = shib2.internet2.edu
 
  # [Required] The name of this origin site (a URI)
- #edu.internet2.middleware.shibboleth.hs.HandleServlet.siteName = urn:mace:incommon:pilot:shibdev.edu
+ edu.internet2.middleware.shibboleth.hs.HandleServlet.siteName = urn:mace:incommon:pilot:shibdev.edu
 
  # [Required] URL at which the corresponding Attribute Authority can be reached
- #edu.internet2.middleware.shibboleth.hs.HandleServlet.AAUrl = http://host.test.edu/shibboleth/AA
+ edu.internet2.middleware.shibboleth.hs.HandleServlet.AAUrl = http://snc.cc.columbia.edu/shibboleth/AA
 
  # [Optional] HTTP Request Header to get principal name from (defaults to REMOTE_USER)
  #edu.internet2.middleware.shibboleth.hs.HandleServlet.username = REMOTE_USER
@@ -25,16 +25,16 @@
 
  # [Required] Location of a Java keystore containing an X509 certificate
  # and matching key.  Used to sign assertions made by this HS
- #edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStorePath = /conf/keystore.jks
+ edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStorePath = /conf/keystore.jks
 
  # [Required] Password for the keystore
- #edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStorePassword = shibhs
+ edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStorePassword = shibhs
 
  # [Required] Keystore alias for the private key
- #edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStoreKeyAlias = shibhs
+ edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStoreKeyAlias = shibhs
 
  # [Required] Password for the private key
- #edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStoreKeyPassword = shibhs
+ edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStoreKeyPassword = shibhs
 
  # [Optional] Keystore alias for the X509 certificate (Defaults to the private key alias)
  #edu.internet2.middleware.shibboleth.hs.HandleServlet.certAlias = shibhs
@@ -49,7 +49,7 @@
 ##### General Configuration #####
 
  # [Required] Name of this Attribute Authority (usually a dns name)
- #edu.internet2.middleware.shibboleth.aa.AAServlet.authorityName = shib2.internet2.edu
+ edu.internet2.middleware.shibboleth.aa.AAServlet.authorityName = shib2.internet2.edu
  
  # [Optional] Set to true if the Attribute Authority should pass internal error messages to 
  # the SHAR (for debugging purposes) (defaults to false)
