Switched to InQueue federation name.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@635 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/conf/origin.properties
+++ b/src/conf/origin.properties
@@ -10,7 +10,7 @@
  #edu.internet2.middleware.shibboleth.hs.HandleServlet.issuer = shib2.internet2.edu
 
  # [Required] The name of this origin site (a URI)
- #edu.internet2.middleware.shibboleth.hs.HandleServlet.siteName = urn:mace:incommon:pilot:shibdev.edu
+ #edu.internet2.middleware.shibboleth.hs.HandleServlet.siteName = urn:mace:inqueue:shibdev.edu
 
  # [Required] URL at which the corresponding Attribute Authority can be reached
  #edu.internet2.middleware.shibboleth.hs.HandleServlet.AAUrl = http://host.test.edu/shibboleth/AA
@@ -112,8 +112,5 @@
 
 ##### Federation Configuration #####
 
- #[Optional] URI corresponding to the federation this origin operates under (defaults to the InCommon pilot policy)
- #edu.internet2.middleware.shibboleth.audiences = urn:mace:incommon:pilot
-
-
-
+ #[Optional] URI corresponding to the federation this origin operates under (defaults to the InQueue policy)
+ #edu.internet2.middleware.shibboleth.audiences = urn:mace:inqueue
