Fixed doc variable.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@643 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -16,7 +16,7 @@
     <property name="endorsed" value="${root}/endorsed/" />
     <property name="distlibs" value="${root}/lib/" />
     <property name="dist" value="${root}/dist/" />
-    <property name="docs" value="${root}/docs/" />
+    <property name="docs" value="${root}/doc/" />
     <property name="javadocs" value="${docs}/api/" />
 
     <property name="year" value="2002"/>
