--- a/.classpath
+++ b/.classpath
@@ -8,11 +8,11 @@
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-beanutils.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-collections.jar"/>
     <classpathentry kind="lib"
-        path="webApplication/WEB-INF/lib/commons-digester.jar" sourcepath="/Shibboleth/lib/commons-digester-src.jar"/>
+        path="webApplication/WEB-INF/lib/commons-digester.jar" sourcepath="lib/commons-digester-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/struts.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/ldap.jar"/>
-    <classpathentry kind="lib" path="lib/junit-3.8.1.jar" sourcepath="/Shibboleth/lib/junit-3.8.1-src.jar"/>
-    <classpathentry kind="lib" path="lib/log4j-1.2.5.jar" sourcepath="/Shibboleth/lib/log4j-1.2.5-src.jar"/>
+    <classpathentry kind="lib" path="lib/junit-3.8.1.jar" sourcepath="lib/junit-3.8.1-src.jar"/>
+    <classpathentry kind="lib" path="lib/log4j-1.2.5.jar" sourcepath="lib/log4j-1.2.5-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/jug-1.0.1.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xalan-2.4.1.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlsec-1.0.5.jar"/>
@@ -22,5 +22,6 @@
     <classpathentry kind="var" path="JAVA_HOME/jre/lib/jce.jar"/>
     <classpathentry kind="var" path="JAVA_HOME/jre/lib/jsse.jar"/>
     <classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
+    <classpathentry kind="lib" path="lib/getopt-1.0.9.jar"/>
     <classpathentry kind="output" path="webApplication/WEB-INF/classes"/>
 </classpath>
