Added comment explaining what this file is for.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@826 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,4 +1,8 @@
-# Default Log4J configuration.  Sends logging output to STDOUT.
+#
+# This is the log4j configuration file for the utilities in
+# shibboleth/java/bin. The log4j.properties used for shibboleth itself is
+# shibboleth/java/src/conf/log4j.properties.
+#
 
 log4j.rootCategory=WARN, stdout
 log4j.logger.org.apache.xml.security=OFF
