Transaction log for HS.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@860 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/conf/log4j.properties
+++ b/src/conf/log4j.properties
@@ -15,6 +15,15 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%-5p %-41X{serviceId} %d{ISO8601} - %m%n
 
 
+# Security transactions can be logged to a separate log as well
+
+# log4j.logger.edu.internet2.middleware.shibboleth.TRANSACTION=INFO, transaction
+log4j.logger.edu.internet2.middleware.shibboleth.TRANSACTION=OFF
+log4j.appender.transaction=org.apache.log4j.RollingFileAppender
+log4j.appender.transaction.File=/tmp/shibboleth-origin.log
+log4j.appender.transaction.layout=org.apache.log4j.PatternLayout
+log4j.appender.transaction.layout.ConversionPattern=%d{ISO8601} %m%n
+
 # The following block represents an example of how to enable very verbose logging.
 
 #log4j.rootCategory=DEBUG, stdout
