Updated eclipse metadata.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@891 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/.project
+++ b/.project
@@ -14,5 +14,6 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.team.cvs.core.cvsnature</nature>
+		<nature>com.sysdeo.eclipse.tomcat.tomcatnature</nature>
 	</natures>
 </projectDescription>
