--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,7 +1,5 @@
 #
-# This is the log4j configuration file for the utilities in
-# shibboleth/java/bin. The log4j.properties used for shibboleth itself is
-# shibboleth/java/src/conf/log4j.properties.
+# This is the log4j configuration file for the utilities in shibboleth/java/bin.
 #
 
 log4j.rootCategory=WARN, stdout
