Added xbean libraries to the eclipse configuration so that the new SP code compiles.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1200 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,8 @@
 	<classpathentry kind="var" path="TOMCAT_HOME/common/lib/jsp-api.jar"/>
 	<classpathentry sourcepath="lib/commons-pool-1.2-src.jar" kind="lib" path="lib/commons-pool-1.2.jar"/>
 	<classpathentry sourcepath="lib/commons-dbcp-1.2.1-src.jar" kind="lib" path="lib/commons-dbcp-1.2.1.jar"/>
+	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmltypes.jar"/>
+	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/xbean.jar"/>
+	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/xbean_xpath.jar"/>
 	<classpathentry kind="output" path="webApplication/WEB-INF/classes"/>
 </classpath>
