Checked in the latest build of the shib-filter project as a jar in the main shibboleth project.  This should get rid of the compile errors when checking out clean copies of the project.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1204 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,6 @@
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmltypes.jar"/>
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/xbean.jar"/>
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/xbean_xpath.jar"/>
+	<classpathentry kind="lib" path="lib/shib-filter.jar"/>
 	<classpathentry kind="output" path="webApplication/WEB-INF/classes"/>
 </classpath>
