--- a/.classpath
+++ b/.classpath
@@ -26,9 +26,8 @@
 	<classpathentry kind="lib" path="endorsed/sax.jar"/>
 	<classpathentry kind="lib" path="endorsed/jaxp-api.jar"/>
 	<classpathentry kind="lib" path="endorsed/dom.jar"/>
-	<classpathentry kind="lib" path="lib/xmlsec-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/xalan-2.6.0.jar"/>
 	<classpathentry kind="lib" path="lib/shib-filter.jar"/>
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlsec-20050423.jar"/>
 	<classpathentry kind="output" path="webApplication/WEB-INF/classes"/>
 </classpath>
