Add endorsed to classpath for Java 1.4 compile
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1429 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -43,6 +43,9 @@
     <path id="build.path">
         <pathelement path="${classpath}" />
         <pathelement location="${build}" />
+        <fileset dir="${endorsed}">
+            <include name="**/*.jar" />
+        </fileset>
         <fileset dir="${libdir}">
             <include name="**/*.jar" />
         </fileset>
