Added portions of the BC provider to support Base64 and ASN.1 encoding/decoding.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1436 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/.classpath
+++ b/.classpath
@@ -29,5 +29,6 @@
 	<classpathentry kind="lib" path="lib/shib-filter.jar"/>
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlsec-20050423.jar"/>
+	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/bc-asn1.jar"/>
 	<classpathentry kind="output" path="webApplication/WEB-INF/classes"/>
 </classpath>
